k8s/alb-example/1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: default
spec:
  selector:
    app: echoserver
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: echoserver
      protocol: TCP
      port: 8080
      targetPort: 8080
      # If you set the `spec.type` field to `NodePort` and you want a specific port number,
      # you can specify a value in the `spec.ports[*].nodePort` field.
      #nodePort:
